PharmaDemo/src/objects/Daily_Summary__c.object
<CustomObject>
    <description>For each month and medical rep this object stores aggregated numbers of days for each type.</description>
    <fields>
        <fullName>Calls__c</fullName>
        <label>Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Submit_Date__c</fullName>
        <label>Last Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Territory__c</fullName>
        <formula>IF(TEXT( Type__c) =&apos;On Territory&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>TEXT(Year( Month__c))&amp;&quot; -&quot;&amp;RIGHT(TEXT(Month( Month__c)+100),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipName>Daily_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity/Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulatory Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Monthly Summary</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{00}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>